# local-tracking-software

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml
RGB_Models/: MoveNet_NOTICE.txt  TEMPLATE.json.example  movenet_lightning.json
packaging/: icon.icns  localtracking.desktop
protocols/: Control_Gathering_6_Minute_Protocol.json  Untitled_Protocol.json
qt_version/: CMakeLists.txt
qt_version/cmake/: FindK4A.cmake  FindK4ABT.cmake  MacOSXBundleInfo.plist.in
qt_version/src/: app_controller.cpp  app_controller.h  config.cpp  config.h  main.cpp
qt_version/src/biofeedback/: biofeedback_engine.cpp  biofeedback_engine.h  biofeedback_recorder.cpp  biofeedback_recorder.h
qt_version/src/camera/: camera_types.h  icamera.cpp  icamera.h  kinect_camera.cpp  kinect_camera.h  model_tracker.cpp  model_tracker.h  onnx_pose_model.cpp  onnx_pose_model.h  webcam_camera.cpp  webcam_camera.h  zed_camera.cpp  zed_camera.h
qt_version/src/data/: data_exporter.cpp  data_exporter.h  session_scanner.cpp  session_scanner.h
qt_version/src/game/: block_game.cpp  block_game.h  game_renderer.cpp  game_renderer.h
qt_version/src/recording/: flag_recorder.cpp  flag_recorder.h  joint_recorder.cpp  joint_recorder.h  playback.cpp  playback.h  protocol.cpp  protocol.h  ring_buffer.h  video_recorder.cpp  video_recorder.h
qt_version/src/ui/: block_game_view.cpp  block_game_view.h  camera_feed_view.cpp  camera_feed_view.h  camera_feed_window.cpp  camera_feed_window.h  config_setup_dialog.cpp  config_setup_dialog.h  data_tab.cpp  data_tab.h  design_system.cpp  design_system.h  experimental_tab.cpp  experimental_tab.h  info_tab.cpp  info_tab.h  live_tab.cpp  live_tab.h  main_window.cpp  main_window.h  overlay_state.h  playback_tab.cpp  playback_tab.h  popout_window.cpp  popout_window.h  protocol_editor_tab.cpp  protocol_editor_tab.h  report_tab.cpp  report_tab.h  resources.qrc  skeleton_view.cpp  skeleton_view.h  style.qss  widget_kit.cpp  widget_kit.h
qt_version/tests/: qt_parity_tests.cpp
scripts/: install_deps_jetson.sh  install_deps_linux.sh  install_deps_macos.sh  install_deps_windows.ps1
tools/: openemr_fhir_probe.py
